--- a/src/markup.css
+++ b/src/markup.css
@@ -3,10 +3,6 @@
 	overflow-x: auto;
 }
 
-.markup-root, .markup-root * {
-	vertical-align: baseline;
-}
-
 .markup-root table, .markup-root td, .markup-root th {
 	border: 1px solid var(--maintxtcolor);
 	border-collapse: collapse;
